--- a/src/template.yaml
+++ b/src/template.yaml
@@ -11,9 +11,9 @@ Metadata:
     LicenseUrl: ../LICENSE
     ReadmeUrl: ../README.md
     Labels: ['cloudfront', 'whitelist', 'securitygroup']
-    HomePageUrl: https://github.com/altrdev/cloudfront_security_group_update_ips
+    HomePageUrl: https://github.com/coast-ch/cloudfront_security_group_update_ips
     SemanticVersion: 0.0.1
-    SourceCodeUrl: https://github.com/altrdev/cloudfront_security_group_update_ips
+    SourceCodeUrl: https://github.com/coast-ch/cloudfront_security_group_update_ips
 
 Resources:
   CloudfrontLambdaRole:
@@ -77,7 +77,7 @@ Resources:
     Properties:
       Endpoint: !GetAtt [ CloudfrontLambdaFunction, Arn ]
       Protocol: "lambda"
-      Region: !Ref AWS::Region
+      Region: "us-east-1"
       TopicArn: "arn:aws:sns:us-east-1:806199016981:AmazonIpSpaceChanged"
 
   LambdaPermission:
